# routes/vehicle.routes.js
@@ -1,5 +1,5 @@
 const { check } = require("express-validator");
-const { getVehicles, createVehicle, deleteVehicle, getVehicle,addOwner } = require("../controllers/Vehicle.controller");
+const { getVehicles, createVehicle, deleteVehicle, getVehicle,addOwner, getAll } = require("../controllers/Vehicle.controller");
 const { verifyToken } = require("../middlewares/auth.middleware");
 
 const router=require("express").Router();
@@ -16,4 +16,5 @@ router.route("/").post(
 router.route("/:id").delete(deleteVehicle);
 router.route("/:id").get(getVehicle)
 router.route("/:id").put(addOwner)
+router.route("/all").get(getAll);
 module.exports=router;
